--- a/Final Project/templates/submit.html
+++ b/Final Project/templates/submit.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 	<title>Submit Page</title>
+	<link rel="stylesheet" type="text/css" href="Homestyle.css">
 </head>
 
 <body>
@@ -9,8 +10,8 @@
 	{% block body %}
 
 <center>
-	<h1>Thank you for your Feedback</h1>
-	<h1>{feedBack}}</h1>
+	<h1 class="yay">Thank you for your Feedback</h1>
+	<h1>{{feedBack}}</h1>
 	<h1>{{Change}}</h1>
 
 </center>
