--- a/Final Project/static/Homestyle.css
+++ b/Final Project/static/Homestyle.css
@@ -122,6 +122,14 @@ h4{
 	font-size: 30px;
 	background-color: black;
 	color: white;
-	border-radius: 20px;
-
+	border-radius: 20px
+}
+.yay{
+	border: solid;
+	border-width: 2px;
+	padding: 10px 10px 10px 10px;
+	font-style: italic;
+	font-size: 30px;
+	background-color: black;
+	color:white;
 }
