--- a/Final Project/templates/HOME.html
+++ b/Final Project/templates/HOME.html
@@ -17,7 +17,7 @@
 			<li id="li1"><a href="/">Home</a></li>
 			<li id="li2"><a href="/his">Production History</a></li>
 			<li id="li3"><a href="/vid">Instructions</a></li>
-			<li id="li4"><a href="/our">Our Team</a></li>			
+			<li id="li4"><a href="/team">Our Team</a></li>			
 			<li id="li5"><a href="/form">Feedback</a></li>			
 
 		</ul>	
