--- a/Final Project/templates/HOME.html
+++ b/Final Project/templates/HOME.html
@@ -3,7 +3,7 @@
 	<title>Movies</title>
 	<link rel="stylesheet" type="text/css" href="../static/Homestyle.css">
 </head>
-<body class="back">
+<body>
 	<div class="saja">
 		<center>
 			<img width="1290"id="image" src="../static/movie.jpeg" >
@@ -24,8 +24,8 @@
 		</center>
 	</nav>
 	{% block body %}
-	<h4>Welcome!</h4>
-	<p id="intro">If you are movies expert or beginner or just passionate ,then this website is just perfect </p>
+	<h4 class="sdsd">Welcome!</h4>
+	<p id="intro">If you are a movies expert or a beginner or just a passionate ,then this website is just perfect </p>
 	<h5 id="int">for you</h5>
 
 
