--- a/Final Project/templates/abo.html
+++ b/Final Project/templates/abo.html
@@ -16,8 +16,7 @@
 	<img  width= 700 src="../static/us.jpg">
 	</center>
 
-	<!-- <div style = "display:inline"> -->
-	<!-- <h2 style="float:right; clear:right">Code for Palestine is a schoolership that cares about students who are in ninth grade , students who are accepted in this schoolership learn for almost three years about design thinking and different kinds of programming languages for instsnce at the first year they study python language ,then Html ,css , JavaScript and Flask  </h2></div> -->
+
 		<h3 id="info">Code for Palestine is a schoolership that cares about students who are in ninth grade , students who are accepted in this schoolership learn for almost three years about design thinking and different kinds of programming languages for instsnce at the first year they study python language ,then Html ,css , JavaScript and Flask.</h3>
 		<hr>
 		<center>
@@ -32,13 +31,15 @@
 			<li>Music& programming lover</li>
 			<li>Movies fan</li>
 		</ul>
+		<a class="personhala" href="/personHala"> Click here for my personal website</a>
 
-		<h3 class="sa">1- Saja Nabil </h3>
+		<h3 class="sa">2- Saja Nabil </h3>
 		<ul class="saa"><li>A year two student </li>
 			<li>Programming & songs lover</li>
 			<li>studies at Arafat gifted school</li>
 			<li>Movies fan</li>
 		</ul>
+		<a class="personsaja" href="/personSaja"> Click here for my personal website</a>
 
 	{% endblock %}
 		
