--- a/Final Project/templates/forms.html
+++ b/Final Project/templates/forms.html
@@ -20,14 +20,14 @@
 
 		<br>
 		<div>
-			<label>__What do you want th change in the animation world?</label>
+			<label>__What do you want to change in the animation world?</label>
 			<input type="text" name="Change" >
 		</div>
 		<br>
 
 	
 		<div>
-			<input type="submit" name="submit" value="thisi is a submit button" >
+			<input type="submit" name="submit" value="Submit" >
 
 		</div>
 	</form>
