--- a/Final Project/static/Homestyle.css
+++ b/Final Project/static/Homestyle.css
@@ -66,7 +66,7 @@ a{
 .NavBar{
 	list-style-type: none;
 }
-h4{
+.sdsd{
 	padding: 20px 20px 20px 70px;
 	font-size: 80px;
 	margin-left: 300;
@@ -75,7 +75,7 @@ h4{
 #intro{
 	padding: 20px 20px 20px 70px;
 	font-size: 30px;
-	margin-left: 200px;
+	margin-left: 190px;
 	margin-right: 300;
 	margin-top: -100px;
 	color: gray;
@@ -149,5 +149,37 @@ h4{
 	color: white;
 	border-radius: 20px
  
+
+}
+.personsaja{
+	border: solid;
+	border-width: 2px;
+	padding: 10px 10px 10px 10px;
+	font-style: italic;
+	font-size: 20px;
+	background-color: black;
+	color: white;
+	border-radius: 20px;
+}
+.sajaweb{
+	border: solid;
+	border-width: 2px;
+	padding: 10px 10px 10px 10px;
+	font-style: italic;
+	font-size: 20px;
+	background-color: black;
+	color: white;
+	border-radius: 20px;
+
+}
+.personhala{
+	border: solid;
+	border-width: 2px;
+	padding: 10px 10px 10px 10px;
+	font-style: italic;
+	font-size: 20px;
+	background-color: black;
+	color: white;
+	border-radius: 20px;
 
 }
