--- a/templates/History.html
+++ b/templates/History.html
@@ -24,7 +24,7 @@
 	left: 50;
 	top: 900;">
 	<hr>
-	<img src="../static/ss.jpg"  style="position: absolute;
+	<img src="../static/amer.jpg"  style="position: absolute;
 	left: 50;
 	top: 1500px;">
 
